# exit-with

./: .taskcmd  Cargo.toml  README.md
.github/workflows/: build-linux-gnu.yml  build-linux-musl.yml  build-macos-aarch64.yml  build-macos.yml  build-manual.yml  build-windows.yml
docs/: README.md
manual/: book.toml
src/: lib.rs  main.rs
tests/: mod.rs  test_interface.rs  test_non_file_arguments.rs
tests/test_file_arguments/: color.txt  mod.rs
