[package]
name = "exit-with"
version = "0.2.0"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Exit with code, stdout & stderr"
documentation = "https://docs.rs/exit-with"
repository = "https://github.com/EngosSoftware/exit-with.git"
keywords = ["exit", "with", "code", "stdout", "stderr"]
homepage = "https://engossoftware.github.io/exit-with/"
categories = ["command-line-utilities"]
edition = "2024"
license = "MIT OR Apache-2.0"
include = [
    "docs/**",
    "src/**",
    "tests/**",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE*",
    "NOTICE",
    "/README.md"
]

[dev-dependencies]
cli-assert = "0.1.13"
